flatdb.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: flatdb
spec:
  serviceName: "flatdb"
  replicas: 5
  template:
    metadata:
      labels:
        app: flatdb
        env: prod
    spec:
      containers:
      - name: flatdb
        image: docker.io/rralcala/flatdb:latest
        ports:
        - containerPort: 5001
          name: peer
        volumeMounts:
        - name: database
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: database
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
