flatdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flatdb
spec:
  ports:
  - port: 5001
    name: peer
  clusterIP: None
  selector:
    app: flatdb
