pkstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    env: prod
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 5000
    name: http
